--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Esme Stylist </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Stylist Fashion Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Esme Stylist</h1>
-        <button class="menu-button">&#9776;</button>
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <a href="#">Menu &#9662;</a>
-                    <div class="dropdown-container">
-                      <ul class="dropdown-menu">
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                      </ul>
-                    </div>
-                  </li>                  
-            </ul>
-          </nav>                
-      </header>
-      
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="logo.png" alt="Stylist Fashion Portfolio">
+      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+  </header>
 
-	<main>
-		<section id="about">
-			<h2>About Me</h2>
-			<p>Insert a brief bio or summary of your experience as a stylist and what sets you apart from other stylists. You can also mention any certifications or awards you have received.</p>
-		</section>
+  <section class="hero">
+    <h1 class="hero-title">Welcome to Stylist Fashion Portfolio</h1>
+    <a href="#" class="hero-button">View Portfolio</a>
+  </section>
 
-		<section id="services">
-			<h2>Services</h2>
-			<p>List the different services you offer as a stylist. You can also include prices and any special promotions you are currently offering. Make sure to use images that show examples of your work.</p>
-			<ul>
-				<li>Service 1</li>
-				<li>Service 2</li>
-				<li>Service 3</li>
-				<li>Service 4</li>
-			</ul>
-		</section>
+  <section class="services">
+    <h2 class="section-title">Our Services</h2>
+    <div class="services-container">
+      <div class="service-box">
+        <img src="service1.jpg" alt="Service 1">
+        <h3>Styling</h3>
+        <p>We provide professional styling services for fashion shows, photoshoots, and other events.</p>
+        <a href="#" class="service-button">Learn More</a>
+      </div>
+      <div class="service-box">
+        <img src="service2.jpg" alt="Service 2">
+        <h3>Consulting</h3>
+        <p>We offer personalized consulting services to help you improve your personal style and wardrobe.</p>
+        <a href="#" class="service-button">Learn More</a>
+      </div>
+      <div class="service-box">
+        <img src="service3.jpg" alt="Service 3">
+        <h3>Training</h3>
+        <p>We also provide training sessions for aspiring fashion stylists and industry professionals.</p>
+        <a href="#" class="service-button">Learn More</a>
+      </div>
+    </div>
+  </section>
 
-		<section id="gallery">
-			<h2>Gallery</h2>
-			<p>Include a gallery of images showcasing your work as a stylist. Make sure to include high-quality images that are visually appealing.</p>
-			<div class="gallery">
-				<img src="image1.jpg">
-				<img src="image2.jpg">
-				<img src="image3.jpg">
-				<img src="image4.jpg">
-				<img src="image5.jpg">
-				<img src="image6.jpg">
-			</div>
-		</section>
-
-		<section id="contact">
-			<h2>Contact Me</h2>
-			<p>Include a contact form or your contact information, so that potential clients can reach out to you to schedule an appointment or ask questions. Make sure to include your phone number, email address, and any social media profiles.</p>
-		</section>
-	</main>
-
-	<footer>
-		<p>&copy; Stylist Portfolio 2023</p>
-	</footer>
-    <script src="script.js"></script>
-
-</body>
-</html>
+  <section class="portfolio">
+    <h2 class="section-title">Our Portfolio</h2>
+    <div class="portfolio-container">
+      <div class="portfolio-item">
+        <img src="portfolio1.jpg" alt="Portfolio 1">
+        <div class="portfolio-overlay">
+          <h3>Portfolio Item 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ligula ac quam tincidunt pellentesque. Nunc sollicitudin, nisi id pulvinar blandit, nibh nibh blandit nulla, non fringilla est velit ut nisl. Aliquam ac sagittis nisi.</p>
+          <a href="#" class="portfolio-button">View More</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="portfolio2.jpg" alt="Portfolio 2">
+        <div
